@@ -1,3 +1,8 @@
+2006-02-15 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
+	* init.d/mountall.sh: fixes for bug #10509
+	* WIP: holding this fix back for 1 week from today so that
+	  some init scripts and spells can be fixed
+
 2006-02-14 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
 	* WIP: removed
 	* init.d/keymap.conf: added UNICODE_START
